--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
                 <div class="new-left-navbar">
                     <ul>
                         <li style="border-right: 1px solid #fff;"><a href="https://interaktif.tempo.co" class="logo-container">interaktif</a></li>
-                        <li><a href="https://interaktif.tempo.co" class="navigasi">Database</a></li>
-                        <li><a href="https://interaktif.tempo.co" class="navigasi">Map</a></li>
+                        <li><a href="database.php" class="navigasi">Database</a></li>
+                        <li><a href="database.php" class="navigasi">Map</a></li>
                     </ul>
                 </div>
                 <div class="new-right-navbar">
