--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=PT+Serif:100,200,300,400,500,600,700,800,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300;400;600;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,800&display=swap" rel="stylesheet">
     <link href="https://interaktif.tempo.co/frontend/css/MetaSerif.OTF">
     <link rel="stylesheet" href="https://interaktif.tempo.co/public/frontend/css/main.css"> 
     <link rel="stylesheet" href="assets/css/style.css">
@@ -60,60 +61,40 @@
 </head>
 <body>
     <div class="image-background fixed-background" style="background-image: url('https://interaktif.tempo.co/frontend/interaktif/images/bg.jpg');background-position: center;background-attachment: fixed;background-size: cover;">
-        <div class="new-navbar">
-            <div class="row">
-                <div class="new-left-navbar">
-                    <ul>
-                        <li style="border-right: 1px solid #fff;"><a href="https://interaktif.tempo.co" class="logo-container">interaktif</a></li>
-                        <li><a href="database.php" class="navigasi">Database</a></li>
-                        <li><a href="database.php" class="navigasi">Map</a></li>
-                    </ul>
-                </div>
-                <div class="new-right-navbar">
-                    <a href="https://interaktif.tempo.co" class="logo-container">
-                        <img src="https://interaktif.tempo.co/public/frontend/images/logo-merah.png" alt="tempo">
-                    </a>
-                </div>
-            </div>
+        <div class="title-container">
+            <h1>MAP DATABASE</h1>
         </div>
         <div class="search-container">
             <button class="btn-search"><i class="fa fa-search"></i></button>
-            <input type="text" name="search" id="search" class="input-search">
+            <input type="text" name="search" id="search" class="input-search" placeholder="Cari Provinsi">
+        </div>
+        <div class="description-container">
+            <p>Lorem <font id="count"></font> ipsum dolor sit amet</p>
         </div>
     </div>
     <div class="body">
         <span class="start"></span>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus ea aspernatur reprehenderit voluptate suscipit, quae laborum, distinctio, dicta dolor alias soluta error. Porro nulla in, nam sit rerum nisi reiciendis?</p>
-        <!-- <img src="https://interaktif.tempo.co/photos/1/unnamed.jpg" alt="tempo"> -->
-        <figcaption><svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 438.533 438.533" xml:space="preserve"><g><path d="M409.133,109.203c-19.608-33.592-46.205-60.189-79.798-79.796C295.736,9.801,259.058,0,219.273,0 c-39.781,0-76.47,9.801-110.063,29.407c-33.595,19.604-60.192,46.201-79.8,79.796C9.801,142.8,0,179.489,0,219.267 c0,39.78,9.804,76.463,29.407,110.062c19.607,33.592,46.204,60.189,79.799,79.798c33.597,19.605,70.283,29.407,110.063,29.407 s76.47-9.802,110.065-29.407c33.593-19.602,60.189-46.206,79.795-79.798c19.603-33.596,29.403-70.284,29.403-110.062 C438.533,179.485,428.732,142.795,409.133,109.203z M361.449,231.831l-25.981,25.981c-3.613,3.613-7.901,5.42-12.847,5.42 c-4.948,0-9.229-1.807-12.847-5.42l-53.954-53.961v143.32c0,4.948-1.813,9.232-5.428,12.847c-3.613,3.62-7.898,5.427-12.847,5.427 h-36.547c-4.948,0-9.231-1.807-12.847-5.427c-3.617-3.614-5.426-7.898-5.426-12.847v-143.32l-53.959,53.961 c-3.431,3.425-7.708,5.133-12.85,5.133c-5.14,0-9.423-1.708-12.85-5.133l-25.981-25.981c-3.422-3.429-5.137-7.714-5.137-12.852 c0-5.137,1.709-9.419,5.137-12.847l103.356-103.353l25.981-25.981c3.427-3.425,7.71-5.14,12.847-5.14 c5.142,0,9.423,1.715,12.849,5.14l25.98,25.981l103.35,103.353c3.432,3.427,5.14,7.71,5.14,12.847 C366.589,224.117,364.881,228.402,361.449,231.831z"/></g></svg>
-            caption
-        </figcaption>
-        <span class="end"></span>
-    </div>
-    <div class="section" id="1">
-        <div class="section-title">
-            <h5>I</h5>
-            <h4>Ekoturisme Demi Hayati Hutan</h4>
+        <div class="paragraf">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus ea aspernatur reprehenderit voluptate suscipit, quae laborum, distinctio, dicta dolor alias soluta error. Porro nulla in, nam sit rerum nisi reiciendis?</p>
         </div>
-        <div class="section-image" style="background-image: url('https://interaktif.tempo.co/photos/2/Foto_6.png');background-attachment: fixed;background-position: right;background-size: contain;background-repeat: no-repeat;width: 100%;height: 100%;"></div>
-    </div>
-    <div class="body">
-        <span class="start"></span>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto quidem quibusdam eaque dolorum maxime culpa voluptatem sunt, ipsum laudantium ducimus commodi. Delectus, eos alias. Maiores magnam similique laudantium vel excepturi.</p>
-        <div class="box-inner close"> 
-            <h3>Baca, klik selengkapnya</h3> 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis quasi sunt hic fugit saepe magni officia fuga corrupti esse. Ad eos similique at dolorum laudantium. Atque harum natus adipisci quas.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis quasi esse maiores, in vitae quia fugiat nulla! Expedita quis cum sequi voluptatibus fugit tenetur nisi voluptatem? Dolores qui magnam asperiores!</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis quo mollitia voluptatibus cumque exercitationem reprehenderit fugit, sunt obcaecati, aliquam veniam accusamus repellat odio quia illo aperiam nam perspiciatis tempora ducimus?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam architecto tenetur tempore magnam ipsa quas! Ullam vero eos dicta. Sapiente, veritatis? Est ipsam quae dignissimos amet tempore ex tempora nemo.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione voluptatum aperiam ipsa pariatur molestias, molestiae quod deserunt ipsam nihil consectetur recusandae, voluptates minus. Totam nobis explicabo commodi tempora delectus. Quam.</p>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sint velit ab nobis cupiditate iure alias nostrum voluptate porro quam enim eius quasi tenetur quas voluptatibus quia, facilis praesentium eligendi ipsa!</p>
-
-            <div class="more-btn close"> 
-                <span id="btn-text-more" class="close" onclick="readmore(this)"></span> 
-            </div> 
+        <div class="list">
+            <div class="column" onclick="klik(1)">
+                <div class="card">
+                    <span>28 January 2019</span>
+                    <br><br><b>Unkhair</b><br><br>
+                    <b>Mahasiswa</b>
+                    <p>Terkait partisipasi aksi</p>
+                </div>
+            </div>
+            <div class="column" onclick="klik(1)">
+                <div class="card">
+                    <span>28 January 2019</span>
+                    <br><br><b>Unkhair</b><br><br>
+                    <b>Mahasiswa</b>
+                    <p>Terkait partisipasi aksi</p>
+                </div>
+            </div>
         </div>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. A molestiae blanditiis repudiandae sint voluptate, laborum magni est pariatur ducimus consectetur! Dicta autem dolor adipisci doloremque assumenda modi ut voluptatibus minima?</p>
         <span class="end"></span>
     </div>
     <div class="credit">
@@ -143,79 +124,103 @@
             <li>Multimedia</li>
         </ul>
         <a href="https://tempo.co" class="center-logo"><img src="https://interaktif.tempo.co/frontend/images/logo-merah.png" alt="tempo" class="img-logo"></a>
-        <center><span class="line"></span></center>
     </div>
-    <div class="footer">
-        <h2><span>Artikel Lainnya</span></h2>
-        <center><span class="line"></span></center>
-        <div class="footer-container">
-            <div class="related-article">
-                <a href="https://interaktif.tempo.co/proyek/normal-baru-di-indonesia/index.html">
-                    <div class="related-image">
-                        <img src="https://interaktif.tempo.co/photos/1/cover-normal-baru-di-indonesia.png" alt="tempo">
-                    </div>
-                    <span>Normal Baru Di Indonesia</span>
-                </a>
-            </div>
-            <div class="related-article">
-                <a href="https://interaktif.tempo.co/proyek/psbb-dalam-data/index.html?lg=id">
-                    <div class="related-image">
-                        <img src="https://interaktif.tempo.co/photos/1/cover-data-corona.jpg" alt="tempo">
-                    </div>
-                    <span>Pembatasan Sosial Setengah Hati</span>
-                </a>
-            </div>
-            <div class="related-article">
-                <a href="https://interaktif.tempo.co/proyek/akhir-kasus-novel-baswedan/index.html">
-                    <div class="related-image">
-                        <img src="https://interaktif.tempo.co/photos/1/cover-akhir-kasus-novel-baswedan.jpg" alt="tempo">
-                    </div>
-                    <span>Akhir Kasus Novel Baswedan</span>
-                </a>
-            </div>
-            <div class="related-article">
-                <a href="https://interaktif.tempo.co/proyek/jakarta-dalam-karantina/index.html">
-                    <div class="related-image">
-                        <img src="https://interaktif.tempo.co/photos/1/cover-psbb-sudirman.jpg" alt="tempo">
-                    </div>
-                    <span>Jakarta Dalam Karantina</span>
-                </a>
-            </div>
+<div id="myModal" class="modal">
+    <div class="modal-content">
+        <div class="modal-header">
+            <h2 style="width:60%" id="name">Nama Korban</h2><h2 class="hide-mobile" style="width:38%" id="date">Tanggal</h2>
+            <span class="close">&times;</span>
+        </div>
+        <div class="modal-body">
+            <h3 class="hide-desktop" id="date">Tanggal</h3><br>
+            <label>LOKASI :</label>
+            <p id="LOKASI">LOKASI</p><br>
+            <label>PROVINSI :</label>
+            <p id="PROVINSI">PROVINSI</p><br>
+            <label>JENIS :</label>
+            <p id="JENIS">JENIS</p><br>
+            <label>PERISTIWA :</label>
+            <p id="PERISTIWA">PERISTIWA</p><br>
+            <label>INSTITUSI :</label>
+            <p id="INSTITUSI">INSTITUSI</p><br>
+            <label>PELAKU :</label>
+            <p id="PELAKU">PELAKU</p><br>
+            <label>TINDAKAN :</label>
+            <p id="TINDAKAN">TINDAKAN</p><br>
+            <label>ALASAN TINDAKAN :</label>
+            <p id="ALASAN-TINDAKAN">ALASAN TINDAKAN</p><br>
+            <label>KORBAN :</label>
+            <p id="KORBAN">KORBAN</p><br>
+            <label>GOLONGAN :</label>
+            <p id="GOLONGAN">GOLONGAN</p><br>
+            <label>ISU :</label>
+            <p id="ISU">ISU</p><br>
+            <label>DAMPAK :</label>
+            <p id="DAMPAK">DAMPAK</p><br>
+            <label>LUKA :</label>
+            <p id="LUKA">LUKA</p><br>
+            <label>TEWAS :</label>
+            <p id="TEWAS">TEWAS</p><br>
+            <label>DITANGKAP :</label>
+            <p id="DITANGKAP">DITANGKAP</p><br>
+            <label>LAINNYA :</label>
+            <p id="LAINNYA">LAINNYA</p><br>
+            <label>L :</label>
+            <p id="L">L</p><br>
+            <label>P :</label>
+            <p id="P">P</p><br>
         </div>
     </div>
+    </div>
 <script src="https://interaktif.tempo.co/public/frontend/js/jquery-3.1.1.min.js"></script> 
-<script src="https://interaktif.tempo.co/public/frontend/js/scrollmagic/ScrollMagic.min.js"></script> 
-<script src="https://interaktif.tempo.co/public/frontend/js/logic.js"></script>
-<script src="https://interaktif.tempo.co/public/frontend/js/splide.min.js"></script>
 <script>
-    var secondarySlider = new Splide( '#secondary-slider', {
-		fixedWidth  : 100,
-        height      : 60,
-        rewind      : true,
-		gap         : 10,
-		cover       : true,
-		isNavigation: true,
-		focus       : 'center',
-		breakpoints : {
-			'600': {
-				fixedWidth: 66,
-				height    : 40,
-			}
-        },
-        padding: {
-            top   : '5px',
-            bottom: '5px',
+var kasus = [];
+$(document).ready(function() {
+    const xxx = $.getJSON("data.json",function(data){
+        kasus = data.Sheet1;
+        $('#count').html(kasus.length)
+    });
+    $('.close').click(function() {
+        $('#myModal').slideUp(500);
+    })
+
+    $(window).click(function(e) {
+        if ($(e.target).is('#myModal')) {
+            $('#myModal').slideUp(500);
         }
-    }).mount();
-    
-    var primarySlider = new Splide( '#primary-slider', {
-		type       : 'fade',
-        heightRatio: 0.6,
-		pagination : false,
-		arrows     : false,
-	} );
-	
-	primarySlider.sync( secondarySlider ).mount();
+    })
+})
+function klik(id) {
+  kasusFiltered =  kasus.filter(function(data) {
+    return data.ID == id;
+  });
+  $('#name').html(kasusFiltered[0].ISU);
+  $('[id=date]').html(kasusFiltered[0].TANGGAL);
+  $('#LOKASI').html(kasusFiltered[0].LOKASI);
+  $('#PROVINSI').html(kasusFiltered[0].PROVINSI);
+  $('#JENIS').html(kasusFiltered[0].JENIS);
+  $('#PERISTIWA').html(kasusFiltered[0].PERISTIWA);
+  $('#INSTITUSI').html(kasusFiltered[0].INSTITUSI);
+  $('#PELAKU').html(kasusFiltered[0].PELAKU);
+  $('#TINDAKAN').html(kasusFiltered[0].TINDAKAN);
+  $('#ALASAN-TINDAKAN').html(kasusFiltered[0].ALASAN);
+  $('#KORBAN').html(kasusFiltered[0].KORBAN);
+  $('#GOLONGAN').html(kasusFiltered[0].GOLONGAN);
+  $('#ISU').html(kasusFiltered[0].ISU);
+  $('#DAMPAK').html(kasusFiltered[0].DAMPAK);
+  $('#LUKA').html(kasusFiltered[0].LUKA);
+  $('#TEWAS').html(kasusFiltered[0].TEWAS);
+  $('#DITANGKAP').html(kasusFiltered[0].DITANGKAP);
+  $('#LAINNYA').html(kasusFiltered[0].LAINNYA);
+  $('#L').html(kasusFiltered[0].L);
+  $('#P').html(kasusFiltered[0].P);
+  
+  $('#myModal').slideDown(500);
+}
+$(document).on('click','.btn-search',function(e) {
+    var search = $('.input-search').val()
+    console.log(search.toUpperCase())
+})
 </script>
 </body>
 </html>
