--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
     <div class="modal-content">
         <div class="modal-body">
             <div class="icon-container">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
+                <img src="assets/images/icon.png" alt="">
+                <img src="assets/images/icon.png" alt="">
+                <img src="assets/images/icon.png" alt="">
             </div>
             <h3 class="hide-desktop" id="name">Tanggal</h3><br>
             <label>LOKASI :</label>
