--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
     <meta name="twitter:image:height" content="433" />
     <meta property="fb:app_id" content="332404380172618" />
     <meta property="fb:pages" content="160355148441">
-    <link rel="shortcut icon" href="https://interaktif.tempo.co/public/frontend/images/favicon.ico" type="image/x-icon"> 
+    <link rel="shortcut icon" href="https://interaktif.tempo.co/public/frontend/images/favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=PT+Serif:100,200,300,400,500,600,700,800,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300;400;600;700;900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,800&display=swap" rel="stylesheet">
     <link href="https://interaktif.tempo.co/frontend/css/MetaSerif.OTF">
-    <link rel="stylesheet" href="https://interaktif.tempo.co/public/frontend/css/main.css"> 
+    <link rel="stylesheet" href="https://interaktif.tempo.co/public/frontend/css/main.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://ginanjarpamungkas.github.io/font-awesome/font-awesome.css">
     <script>
@@ -53,28 +53,29 @@
           page: location.pathname + location.search + location.hash
         });
     </script>
-    
+
     <script type="text/javascript">
     _atrk_opts = { atrk_acct:"yIXbf1a0Ix00UK", domain:"tempo.co",dynamic: true};
     (function() { var as = document.createElement('script'); as.type = 'text/javascript'; as.async = true; as.src = "https://d31qbv1cthcecs.cloudfront.net/atrk.js"; var s = document.getElementsByTagName('script')[0];s.parentNode.insertBefore(as, s); })();
     </script>
 </head>
 <body>
-    <div class="image-background fixed-background" style="background-image: url('https://interaktif.tempo.co/frontend/interaktif/images/bg.jpg');background-position: center;background-attachment: fixed;background-size: cover;">
+    <div class="image-background fixed-background" style="background-color: black ;background-position: center;background-attachment: fixed;background-size: cover;">
         <div class="title">
             <div class="title-container">
-                <h1>MAP DATABASE</h1>
+                <h1>Dalam Bayang-Bayang Represi</h1>
             </div>
             <div class="description-container">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum at ullam excepturi eos, numquam asperiores facilis quia nulla. Voluptate voluptatibus fugiat obcaecati molestias rem labore possimus eaque quia voluptatem repellendus?</p>
-                <p style="text-align: center;">Lorem 197 ipsum dolor sit amet</p>
+              <p>Laman ini akan menampilkan situasi dan kondisi kebebasan sipil di Indonesia yang kian hari kian menyusut. Kami mengukur ituasi dan kondisi penyusutan kebebasan sipil melalui praktik pembatasan kebebasan sipil yang mencakup pembatasan terhadap kebebasan berekspresi, kebebasan berkumpul, dan kebebasan menyampaikan pendapat secara damai.</p>
+              <p>Tempo bersama dengan KontraS menyusun laman ini guna menjadi bahan reflektif bagi publik mengenai kondisi kebebasan sipil yang berada dalam bayang-bayang represi. laman ini dapat menjadi petunjuk bagi publik dalam memahami penyusutan kebebasan sipil dengan sejumlah variabel yang kami tampilkan.</p>
                 <p>instruksi Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                 <p style="text-align: center;">Pada saat ini ada <em> 197 </em> kasus represi</p>
             </div>
             <div class="search-container">
                 <div class="btn-search-container">
-                    <a data-target="#search-represi" class="btn-search-category">JENIS REPRESI</a>
-                    <a data-target="#search-institusi" class="btn-search-category">INSTITUSI</a>
-                    <a data-target="#search-provinsi" class="btn-search-category">PROVINSI</a>
+                    <a data-target="#search-represi" class="btn-search-category">Bentuk Represi</a>
+                    <a data-target="#search-institusi" class="btn-search-category">Institusi</a>
+                    <a data-target="#search-provinsi" class="btn-search-category">Provinsi</a>
                 </div>
                 <div class="back-container">
                     <div class="search-input-container">
@@ -83,7 +84,7 @@
                         <input type="text" id="search-institusi" class="input-search" placeholder="Cari Institusi">
                         <input type="text" id="search-provinsi" class="input-search" placeholder="Cari Provinsi">
                     </div>
-                    <a data-target="#back" class="back">Kembali awal</a>
+                    <a data-target="#back" class="back">Kembali ke awal</a>
                 </div>
             </div>
         </div>
@@ -92,37 +93,8 @@
             </div>
         </div>
     </div>
-    <div class="body">
-        <span class="start"></span>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus ea aspernatur reprehenderit voluptate suscipit, quae laborum, distinctio, dicta dolor alias soluta error. Porro nulla in, nam sit rerum nisi reiciendis?</p>
-        <span class="end"></span>
-    </div>
     <div class="credit">
-        <h2>CREDIT</h2>
-        <p class="wordwide">Pimpinan Proyek</p>
-        <ul>
-            <li>Pimpinan</li>
-        </ul>
-        <p class="wordwide">Penulis</p>
-        <ul>
-            <li>Penulis</li>
-        </ul>
-        <p class="wordwide">Editor</p>
-        <ul>
-            <li>Editor</li>
-        </ul>
-        <p class="wordwide">Video</p>
-        <ul>
-            <li>Video</li>
-        </ul>
-        <p class="wordwide">Ilustrasi</p>
-        <ul>
-            <li>Ilustrasi</li>
-        </ul>
-        <p class="wordwide">Multimedia</p>
-        <ul>
-            <li>Multimedia</li>
-        </ul>
+        <a href="https://kontras.org/en/home-3/" class="center-logo"><img src="assets/images/kontras.jpg" alt="tempo" class="img-logo"></a>
         <a href="https://tempo.co" class="center-logo"><img src="https://interaktif.tempo.co/frontend/images/logo-merah.png" alt="tempo" class="img-logo"></a>
     </div>
 <div id="myModal" class="modal">
@@ -191,7 +163,7 @@
         </div>
     </div>
     </div>
-<script src="https://interaktif.tempo.co/public/frontend/js/jquery-3.1.1.min.js"></script> 
+<script src="https://interaktif.tempo.co/public/frontend/js/jquery-3.1.1.min.js"></script>
 <script>
 var kasus = [];
 $(document).ready(function() {
@@ -232,7 +204,7 @@ function klik(id) {
   $('#LAINNYA').html(kasusFiltered[0].LAINNYA);
   $('#L').html(kasusFiltered[0].L);
   $('#P').html(kasusFiltered[0].P);
-  
+
   $('#myModal').slideDown(500);
 }
 $(document).on('click','.btn-search-category',function(e) {
