--- a/index.html
+++ b/index.html
@@ -60,16 +60,16 @@
     </script>
 </head>
 <body>
-    <div class="image-background fixed-background" style="background-color: black ;background-position: center;background-attachment: fixed;background-size: cover;">
+    <div class="image-background fixed-background" style="background-image: url(assets/images/anarko06-min.jpg);">
         <div class="title">
             <div class="title-container">
                 <h1>Dalam Bayang-Bayang Represi</h1>
             </div>
-            <div class="description-container">
+            <div class="description-container" style="background color:black">
               <p>Laman ini akan menampilkan situasi dan kondisi kebebasan sipil di Indonesia yang kian hari kian menyusut. Kami mengukur ituasi dan kondisi penyusutan kebebasan sipil melalui praktik pembatasan kebebasan sipil yang mencakup pembatasan terhadap kebebasan berekspresi, kebebasan berkumpul, dan kebebasan menyampaikan pendapat secara damai.</p>
               <p>Tempo bersama dengan KontraS menyusun laman ini guna menjadi bahan reflektif bagi publik mengenai kondisi kebebasan sipil yang berada dalam bayang-bayang represi. laman ini dapat menjadi petunjuk bagi publik dalam memahami penyusutan kebebasan sipil dengan sejumlah variabel yang kami tampilkan.</p>
-                <p>instruksi Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
-                 <p style="text-align: center;">Pada saat ini ada <em> 197 </em> kasus represi</p>
+                <p>Klik salah satu dari tiga tombol di bawah untuk memperlihatkan hasil database. Untuk melihat database provinsi, ketik nama provinsi yang anda inginkan ke dalam search bar.</p>
+                 <p style="text-align: center;">Pada saat ini ada <b style="color: red"> 197 </b> kasus represi di Indonesia</p>
             </div>
             <div class="search-container">
                 <div class="btn-search-container">
@@ -111,10 +111,15 @@
             </div>
         </div>
     </div>
+  </div>
+    <div class="image-background new-background" style="background-color: black ;background-position: center;background-attachment: fixed;background-size: cover;">
     <div class="credit">
-        <a href="https://kontras.org/en/home-3/" class="center-logo"><img src="assets/images/kontras.jpg" alt="tempo" class="img-logo"></a>
         <a href="https://tempo.co" class="center-logo"><img src="https://interaktif.tempo.co/frontend/images/logo-merah.png" alt="tempo" class="img-logo"></a>
+      <a href="https://kontras.org/" class="center-logo"><img src="assets/images/kontras.jpg" alt="kontras" class="img-logo2" style="height: 68px;width: auto;"></a>
     </div>
+  </div>
+
+
 <div id="myModal" class="modal">
     <div class="modal-content">
         <div class="modal-body" style="position: relative;">
