--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
                 <h1>Dalam Bayang-Bayang Represi</h1>
             </div>
             <div class="description-container" style="background color:black">
-              <p>Laman ini akan menampilkan situasi dan kondisi kebebasan sipil di Indonesia yang kian hari kian menyusut. Kami mengukur situasi dan kondisi penyusutan kebebasan sipil melalui praktik pembatasan kebebasan sipil yang mencakup pembatasan terhadap kebebasan berekspresi, kebebasan berkumpul, dan kebebasan menyampaikan pendapat secara damai.</p>
-              <p>Tempo bersama dengan KontraS menyusun laman ini guna menjadi bahan reflektif bagi publik mengenai kondisi kebebasan sipil yang berada dalam bayang-bayang represi. laman ini dapat menjadi petunjuk bagi publik dalam memahami penyusutan kebebasan sipil dengan sejumlah variabel yang kami tampilkan.</p>
-                <p>Klik salah satu dari tiga tombol di bawah untuk memperlihatkan hasil database. Untuk melihat database provinsi, ketik nama provinsi yang anda inginkan ke dalam search bar.</p>
-                 <p style="text-align: center;">Pada saat ini ada <b style="color: red"> 197 </b> kasus represi di Indonesia</p>
+              <p>Laman ini akan menampilkan situasi dan kondisi kebebasan sipil di Indonesia yang kian menyusut. Kami mengukur situasi dan kondisi represif ini melalui praktik pembatasan kebebasan sipil. Pengekangan ini mencakup pembatasan terhadap kebebasan berekspresi, kebebasan berkumpul, dan kebebasan menyampaikan pendapat secara damai.</p>
+              <p>Tempo bersama KontraS menyusun laman ini guna menjadi bahan reflektif bagi publik mengenai kondisi kebebasan sipil yang berada dalam bayang-bayang represi. Laman ini dapat menjadi petunjuk bagi publik dalam memahami penyusutan kebebasan sipil dengan sejumlah variabel yang kami tampilkan.</p>
+              <p>Klik salah satu dari tiga tombol di bawah untuk memperlihatkan hasil database. Untuk melihat database provinsi, ketik nama provinsi yang anda inginkan di dalam 'search bar'.</p>
+                               <p style="text-align: center;">Pada saat ini ada <b style="color: red"> 197 </b> kasus represi di Indonesia</p>
             </div>
             <div class="search-container">
                 <div class="btn-search-container">
